[package]
name = "r68k-emu"
version = "0.1.0"
authors = ["Martin Hellspong <martin.hellspong@factor10.com>"]
build = "build.rs"

[dependencies]
r68k-common = { path = "../common" }
lazy_static = "0.1.*"
clippy = {version = "*", optional = true}

[dev-dependencies]
r68k-tools = { path = "../tools" }
itertools = "0.4"
libc = "0.2.2"
quickcheck = "0.2"
rand = "0.3"
