[package]
name = "r68k-tools"
version = "0.1.0"
authors = ["Martin Hellspong <martin.hellspong@factor10.com>"]

[lib]
# The name of a target is the name of the library that will be generated. This
# is defaulted to the name of the package or project.

# This field points at where the crate is located, relative to the `Cargo.toml`.
path = "src/lib.rs"

[dependencies]
r68k-common = { path = "../common" }
pest = "0.4"

[dev-dependencies]
itertools = "0.4"
rand = "0.3"
